--- a/servicelist.html
+++ b/servicelist.html
@@ -17,7 +17,7 @@
        title="服务列表" toolbar="#tb"
        singleSelect="true" fitColumns="true" id="servicelist">
 </table>
-<div id="addialog" class="easyui-dialog" title="添加合同" style="width:400px;height:auto;padding:10px">
+<div id="addialog" class="easyui-dialog" title="添加服务" style="width:400px;height:auto;padding:10px">
     <table cellpadding="5">
         <tr>
             <td>申报类别/考核类别/进修类型:</td>
