--- a/infolist.html
+++ b/infolist.html
@@ -25,15 +25,16 @@
        title="文章列表" toolbar="#tb"
        singleSelect="true" fitColumns="true" id="articlelist">
 </table>
-<div id="addialog" class="easyui-dialog" closed="true" style="width:100%;height:100%;padding:10px">
+<div id="addialog" class="easyui-dialog" closed="true" style="width:100%;height:500px;padding:10px">
     <form action="" id="formlist">
         <table cellpadding="5" width="100%">
             <tr>
-                <td>摘要:</td>
-                <td><input class="easyui-validatebox" data-options="required:true" type="text" name="summary"></input></td>
+
 
                 <td>标题:</td>
                 <td><input class="easyui-validatebox" type="text" name="title"></input></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>排序值:</td>
@@ -44,6 +45,10 @@
             <tr>
                 <td>封面</td>
                 <td colspan="3"><input class="easyui-filebox" id="uploadcover" style="width: 300px" buttonText='封面上传' type="text" name="cover_img"><a href="javascript:void(0)" class="easyui-linkbutton" style="margin-left:10px;" onclick="submitCover()">上传</a><input type="hidden" name="coverImg"></td>
+            </tr>
+            <tr>
+                <td>摘要:</td>
+                <td colspan="3"><input class="easyui-textbox" data-options="required:true,multiline:true" style="width: 30%; height: 50px" type="text" name="summary"></input></td>
             </tr>
             <tr>
                 <td>
